Fix z-index of buttons in archive

--- a/site/web/app/themes/sd-theme/resources/assets/styles/layouts/_archive.scss
+++ b/site/web/app/themes/sd-theme/resources/assets/styles/layouts/_archive.scss
@@ -30,8 +30,8 @@
   }
 
   // Display links on top of card link
-  .card-body a,
-  .card-content a {
+  a,
+  button {
     position: relative;
     z-index: 1;
   }
